--- a/src/components/SpaceCard/styles.css
+++ b/src/components/SpaceCard/styles.css
@@ -10,6 +10,17 @@
     justify-content: left;
     width: 40rem;
     margin: 2rem 0;
-    border-radius: 1rem;
+    /* border-radius: 1rem; */
     padding: 1rem;
+}
+
+.SpaceCard-Link {
+    text-decoration: none;
+    background-color: rgb(128, 128, 218);
+    color: white;
+    padding: 0.5rem;
+}
+
+.SpaceCard-Link:hover {
+    background-color: white;
 }
