Finished feauture 4, user can now delete a story, page refreshes upon deletion of a story

--- a/src/components/SpaceCard/styles.css
+++ b/src/components/SpaceCard/styles.css
@@ -6,12 +6,18 @@
 .SpaceCard {
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     justify-content: left;
     width: 40rem;
     margin: 2rem 0;
-    /* border-radius: 1rem; */
     padding: 1rem;
+}
+
+.SpaceCard p {
+    white-space: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 6rem;
 }
 
 .SpaceCard-Link {
