--- a/src/components/StoryCard/styles.css
+++ b/src/components/StoryCard/styles.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 2rem;
+    padding: 2rem 0;
     border-top: 5px solid rgba(0, 0, 0, 0.1);
 }
 
@@ -11,7 +11,7 @@
 }
 
 .StoryCard h3 {
-margin-bottom: 2rem;
+margin-bottom: 2rem;    
 }
 
 .StoryCard-Content {
@@ -24,4 +24,23 @@ height: auto;
 max-width: 40rem;
 max-height: 25rem;
 margin-left: 5rem;
+}
+
+.Delete-Button-Container {
+    display: flex;
+    align-items: flex-end;
+    margin-left: 2rem;
+}
+
+.Delete-Button {
+	border: none;
+	padding: 0;
+	cursor: pointer;
+	outline: inherit;
+}
+
+.Delete-Button.Icon:hover {
+    color: tomato;
+    background-color: whitesmoke;
+    cursor: pointer;
 }
