--- a/src/components/SpaceHeader/styles.css
+++ b/src/components/SpaceHeader/styles.css
@@ -8,8 +8,9 @@
 	padding: 0;
 	cursor: pointer;
 	outline: inherit;
-    align-items: baseline;
+    align-items: center;
     flex-direction: row-reverse;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .Edit-Post-Container {
