--- a/src/components/NewStoryForm/styles.css
+++ b/src/components/NewStoryForm/styles.css
@@ -1,5 +1,4 @@
-.New-Story-Container {
-    border: 1px solid rgba(0, 0, 0, 0.5);
+.New-Story-Container, .Edit-Space-Container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,6 +11,7 @@
 .Form-Row {
     display: flex;
     margin-bottom: 1rem;
+    width: 15rem;
 }
 
 .Forms-Container {
@@ -25,8 +25,9 @@
 
 .Forms-Container input {
     margin-left: 1rem;
-    border-radius: 0.5rem;
+    width: 15rem;
 }
+
 
 .Preview-Image {
     width: auto;
